# moonblokz-radio-simulator

./: AGENTS.md  Cargo.toml  LICENSE  README.md  TODO.md  additional_tabs.md  analyzer_detailed_spec.md  analyzer_draft_spec.md  connection_matrix.md  control_functions.md  control_functions_v2.md  review.md  simulation1.json  simulation2.json  simulation3.json  test_simulation.json  test_simulation_2.json  test_simulation_old.json
.cargo/: config.toml
.github/: copilot-instructions.md
scenes/: 100_random_nodes.json  100_random_nodes_with_wall.json  basic.json  example.json  impossible_case.json  labyrinth.json  latlng.json  planet_one_layer.json  planet_two_layers.json  simulation1.json  simulation2.json  simulation3.json  simulation4_planet_one_layer.json  simulation5_planet_two_layers.json  test_simulation.json  test_simulation_2.json
scenes/analyzer/: diosd.json
scenes/simulation/: 100_random_nodes.json  100_random_nodes_with_wall.json  example.json  non_square.json  planet_one_layer.json  planet_two_layers.json
src/: main.rs  network.rs  signal_calculations.rs  time_driver.rs
src/analyzer/: log_loader.rs  log_parser.rs  mod.rs  task.rs  types.rs
src/common/: connection_matrix.rs  mod.rs  scene.rs
src/control/: client.rs  command.rs  config.rs  mod.rs
src/simulation/: geometry.rs  log_capture.rs  mod.rs  network.rs  network_task.rs  node_task.rs  signal_calculations.rs  types.rs
src/ui/: app_state.rs  map.rs  mod.rs  mode_selector.rs  right_panel.rs  top_panel.rs
