[package]
name = "moonblokz-radio-simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.27", default-features = false, features = ["wgpu","persistence"] }
egui = { version = "0.27", features = ["default_fonts"] }
egui_extras = "0.27"
embassy-executor = { version = "0.7.0", features = ["arch-std"]}
embassy-futures = { version = "0.1.1"}
embassy-time = { version = "0.4.0",features = ["std"]}
moonblokz-radio-lib = { path = "../moonblokz-radio-lib",default-features = false, features = ["radio-device-simulator"]}
log = "0.4"
env_logger = "0.11"
rand = "0.8"
futures = { version = "0.3", default-features = false, features = ["std"] }
embassy-sync = { version = "=0.6.0", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rand_distr = "0.4"
rfd="0.15.4"